[project]
name = "ribonanza_refactor"
version = "0.1.0"
description = "Refactored Ribonanza RNA Folding solution with MLOps tools"
authors = [{ name = "Илья Рубинштейн" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[gs]>=3.59.1",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "x-transformers>=2.1.37",
]

